[tool.poetry]
name = "puapi"
version = "0.1.0"
description = ""
authors = ["Zachary-collins7 <Zachary.collins1231@gmail.com>"]
readme = "README.md"
packages = [{include = "puapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
playwright = "^1.42.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
poetry-plugin-export = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
