[tool.poetry]
name = "puapi"
version = "0.1.0"
description = ""
authors = ["Zachary-collins7 <Zachary.collins1231@gmail.com>"]
readme = "README.md"
packages = [{include = "puapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
playwright = "^1.42.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
poetry-plugin-export = "^1.7.1"
bandit = "^1.7.8"
black = "^24.4.0"
codespell = "^2.2.6"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pyupgrade = "^3.15.2"
safety = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
