[tool.poetry]
name = "puapi"
version = "0.1.0"
description = ""
authors = ["Zachary-collins7 <Zachary.collins1231@gmail.com>"]
readme = "README.md"
packages = [{include = "puapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
playwright = "^1.42.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
poetry-plugin-export = "^1.7.1"
bandit = "^1.7.8"
black = "^24.4.0"
codespell = "^2.2.6"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pyupgrade = "^3.15.2"
safety = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs    # exclude a directory named '.eggs'
  | \.git     # exclude a directory named '.git'
  | \.hg      # exclude a directory named '.hg'
  | \.mypy_cache  # exclude a directory named '.mypy_cache'
  | \.tox     # exclude a directory named '.tox'
  | \.venv    # exclude a directory named '.venv'
  | \.vscode  # exclude a directory named '.vscode'
  | _build    # exclude any directory named '_build'
  | buck-out  # exclude any directory named 'buck-out'
  | build     # exclude any directory named 'build'
  | dist      # exclude any directory named 'dist'
  | venv      # exclude any directory named 'venv'
)/
'''

[flake8]
max-line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
profile = "black"